Add Google Colab integration steps to all notebooks

--- a/notebooks/pattern_tradeoff.ipynb
+++ b/notebooks/pattern_tradeoff.ipynb
@@ -6,6 +6,8 @@
    "source": [
     "# AMPLPY: Roll Cutting - Revision 1 & 2\n",
     "\n",
+    "[![Open In Colab](https://colab.research.google.com/assets/colab-badge.svg)](https://colab.research.google.com/github/ampl/amplpy/blob/master/notebooks/pattern_tradeoff.ipynb)\n",
+    "\n",
     "Documentation: http://amplpy.readthedocs.io\n",
     "\n",
     "GitHub Repository: https://github.com/ampl/amplpy\n",
@@ -17,21 +19,68 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Imports"
+    "### Setup"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
-    "from __future__ import print_function\n",
+    "!pip install -q amplpy"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Google Colab integration"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%%bash\n",
+    "[[ ! -e /colabtools ]] && exit  # Run only if running on Google Colab\n",
+    "rm -rf ampl.linux-intel64\n",
+    "#!curl -O https://portal.ampl.com/dl/amplce/ampl.linux64.tgz && tar xzf ampl.linux64.tgz \n",
+    "curl -O https://portal.ampl.com/dl/modules/ampl-module.linux64.tgz && tar xzf ampl-module.linux64.tgz\n",
+    "curl -O https://portal.ampl.com/dl/modules/gurobi-module.linux64.tgz && tar xzf gurobi-module.linux64.tgz\n",
+    "cd ampl.linux-intel64 && pwd\n",
+    "#LICENSE_UUID=\n",
+    "test ! -z $LICENSE_UUID && curl -O https://portal.ampl.com/download/license/$LICENSE_UUID/ampl.lic"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import os\n",
+    "if os.path.exists('/colabtools'):\n",
+    "    os.environ['PATH'] += os.pathsep + '/content/ampl.linux-intel64'"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Imports"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "from amplpy import AMPL\n",
-    "from math import floor\n",
-    "import os"
+    "from math import floor"
    ]
   },
   {
@@ -43,30 +92,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "param roll_width > 0;\r\n",
-      "\r\n",
-      "set WIDTHS;\r\n",
-      "param orders {WIDTHS} > 0;\r\n",
-      "\r\n",
-      "param nPAT integer >= 0;\r\n",
-      "param nbr {WIDTHS,1..nPAT} integer >= 0;\r\n",
-      "\r\n",
-      "var Cut {1..nPAT} integer >= 0;\r\n",
-      "\r\n",
-      "minimize Number:\r\n",
-      "   sum {j in 1..nPAT} Cut[j];\r\n",
-      "minimize Waste:\r\n",
-      "   sum {j in 1..nPAT} Cut[j] * (roll_width - sum {i in WIDTHS} i * nbr[i,j]);\r\n",
-      "\r\n",
-      "subj to Fulfill {i in WIDTHS}:\r\n",
-      "   sum {j in 1..nPAT} nbr[i,j] * Cut[j] >= orders[i];\r\n",
+      "param roll_width > 0;\n",
+      "\n",
+      "set WIDTHS;\n",
+      "param orders {WIDTHS} > 0;\n",
+      "\n",
+      "param nPAT integer >= 0;\n",
+      "param nbr {WIDTHS,1..nPAT} integer >= 0;\n",
+      "\n",
+      "var Cut {1..nPAT} integer >= 0;\n",
+      "\n",
+      "minimize Number:\n",
+      "   sum {j in 1..nPAT} Cut[j];\n",
+      "minimize Waste:\n",
+      "   sum {j in 1..nPAT} Cut[j] * (roll_width - sum {i in WIDTHS} i * nbr[i,j]);\n",
+      "\n",
+      "subj to Fulfill {i in WIDTHS}:\n",
+      "   sum {j in 1..nPAT} nbr[i,j] * Cut[j] >= orders[i];\n",
       "\n"
      ]
     }
@@ -78,29 +127,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\r\n",
-      "param roll_width := 64.5;\r\n",
-      "\r\n",
-      "param: WIDTHS: orders :=\r\n",
-      "         6.77    10\r\n",
-      "         7.56    40\r\n",
-      "        17.46    33\r\n",
-      "        18.76    10 ;\r\n",
-      "\r\n",
-      "param nPAT := 9 ;\r\n",
-      "\r\n",
-      "param nbr:  1  2  3  4  5  6  7  8  9 :=\r\n",
-      "     6.77   0  1  1  0  3  2  0  1  4\r\n",
-      "     7.56   1  0  2  1  1  4  6  5  2\r\n",
-      "    17.46   0  1  0  2  1  0  1  1  1\r\n",
-      "    18.76   3  2  2  1  1  1  0  0  0 ;\r\n",
+      "\n",
+      "param roll_width := 64.5;\n",
+      "\n",
+      "param: WIDTHS: orders :=\n",
+      "         6.77    10\n",
+      "         7.56    40\n",
+      "        17.46    33\n",
+      "        18.76    10 ;\n",
+      "\n",
+      "param nPAT := 9 ;\n",
+      "\n",
+      "param nbr:  1  2  3  4  5  6  7  8  9 :=\n",
+      "     6.77   0  1  1  0  3  2  0  1  4\n",
+      "     7.56   1  0  2  1  1  4  6  5  2\n",
+      "    17.46   0  1  0  2  1  0  1  1  1\n",
+      "    18.76   3  2  2  1  1  1  0  0  0 ;\n",
       "\n"
      ]
     }
@@ -119,7 +168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -139,14 +188,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Gurobi 7.5.1: optimal solution; objective 20\n",
+      "Gurobi 9.5.0: optimal solution; objective 20\n",
       "3 simplex iterations\n",
       "1 branch-and-cut nodes\n",
       "Number = 20\n",
@@ -169,14 +218,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Gurobi 7.5.1: optimal solution; objective 15.62\n",
+      "Gurobi 9.5.0: optimal solution; objective 15.62\n",
       "2 simplex iterations\n",
       "1 branch-and-cut nodes\n",
       "Number = 35\n",
@@ -199,31 +248,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "param roll_width > 0;\r\n",
-      "param over_lim integer >= 0;\r\n",
-      "\r\n",
-      "set WIDTHS;\r\n",
-      "param orders {WIDTHS} > 0;\r\n",
-      "\r\n",
-      "param nPAT integer >= 0;\r\n",
-      "param nbr {WIDTHS,1..nPAT} integer >= 0;\r\n",
-      "\r\n",
-      "var Cut {1..nPAT} integer >= 0;\r\n",
-      "\r\n",
-      "minimize Number:\r\n",
-      "   sum {j in 1..nPAT} Cut[j];\r\n",
-      "minimize Waste:\r\n",
-      "   sum {j in 1..nPAT} Cut[j] * (roll_width - sum {i in WIDTHS} i * nbr[i,j]);\r\n",
-      "\r\n",
-      "subj to Fulfill {i in WIDTHS}:\r\n",
-      "   orders[i] <= sum {j in 1..nPAT} nbr[i,j] * Cut[j] <= orders[i] + over_lim;\r\n",
+      "param roll_width > 0;\n",
+      "param over_lim integer >= 0;\n",
+      "\n",
+      "set WIDTHS;\n",
+      "param orders {WIDTHS} > 0;\n",
+      "\n",
+      "param nPAT integer >= 0;\n",
+      "param nbr {WIDTHS,1..nPAT} integer >= 0;\n",
+      "\n",
+      "var Cut {1..nPAT} integer >= 0;\n",
+      "\n",
+      "minimize Number:\n",
+      "   sum {j in 1..nPAT} Cut[j];\n",
+      "minimize Waste:\n",
+      "   sum {j in 1..nPAT} Cut[j] * (roll_width - sum {i in WIDTHS} i * nbr[i,j]);\n",
+      "\n",
+      "subj to Fulfill {i in WIDTHS}:\n",
+      "   orders[i] <= sum {j in 1..nPAT} nbr[i,j] * Cut[j] <= orders[i] + over_lim;\n",
       "\n"
      ]
     }
@@ -235,30 +284,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\r\n",
-      "param roll_width := 64.5;\r\n",
-      "param over_lim := 10 ;\r\n",
-      "\r\n",
-      "param: WIDTHS: orders :=\r\n",
-      "         6.77    10\r\n",
-      "         7.56    40\r\n",
-      "        17.46    33\r\n",
-      "        18.76    10 ;\r\n",
-      "\r\n",
-      "param nPAT := 9 ;\r\n",
-      "\r\n",
-      "param nbr:  1  2  3  4  5  6  7  8  9 :=\r\n",
-      "     6.77   0  1  1  0  3  2  0  1  4\r\n",
-      "     7.56   1  0  2  1  1  4  6  5  2\r\n",
-      "    17.46   0  1  0  2  1  0  1  1  1\r\n",
-      "    18.76   3  2  2  1  1  1  0  0  0 ;\r\n",
+      "\n",
+      "param roll_width := 64.5;\n",
+      "param over_lim := 10 ;\n",
+      "\n",
+      "param: WIDTHS: orders :=\n",
+      "         6.77    10\n",
+      "         7.56    40\n",
+      "        17.46    33\n",
+      "        18.76    10 ;\n",
+      "\n",
+      "param nPAT := 9 ;\n",
+      "\n",
+      "param nbr:  1  2  3  4  5  6  7  8  9 :=\n",
+      "     6.77   0  1  1  0  3  2  0  1  4\n",
+      "     7.56   1  0  2  1  1  4  6  5  2\n",
+      "    17.46   0  1  0  2  1  0  1  1  1\n",
+      "    18.76   3  2  2  1  1  1  0  0  0 ;\n",
       "\n"
      ]
     }
@@ -277,14 +326,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Gurobi 7.5.1: optimal solution; objective 20\n",
+      "Gurobi 9.5.0: optimal solution; objective 20\n",
       "7 simplex iterations\n",
       "1 branch-and-cut nodes\n"
      ]
@@ -305,24 +354,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Gurobi 7.5.1: optimal solution; objective 46.72\n",
-      "7 simplex iterations\n",
+      "Gurobi 9.5.0: optimal solution; objective 46.72\n",
+      "4 simplex iterations\n",
       "1 branch-and-cut nodes\n",
-      "Gurobi 7.5.1: optimal solution; objective 46.72\n",
+      "Gurobi 9.5.0: optimal solution; objective 46.72\n",
       "4 simplex iterations\n",
-      "Gurobi 7.5.1: optimal solution; objective 47.89\n",
+      "1 branch-and-cut nodes\n",
+      "Gurobi 9.5.0: optimal solution; objective 47.89\n",
+      "4 simplex iterations\n",
+      "1 branch-and-cut nodes\n",
+      "Gurobi 9.5.0: optimal solution; objective 49.16\n",
+      "4 simplex iterations\n",
+      "1 branch-and-cut nodes\n",
+      "Gurobi 9.5.0: optimal solution; objective 54.76\n",
       "5 simplex iterations\n",
-      "Gurobi 7.5.1: optimal solution; objective 49.16\n",
-      "4 simplex iterations\n",
-      "Gurobi 7.5.1: optimal solution; objective 54.76\n",
-      "7 simplex iterations\n",
       "1 branch-and-cut nodes\n"
      ]
     }
@@ -355,19 +407,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Min 20 rolls with waste 63.62\n",
+      "Min 20 rolls with waste 62.04\n",
       "\n",
       "Over\tWaste\tNumber\n",
-      "9\t46.72\t22\n",
-      "7\t47.89\t21\n",
-      "5\t54.76\t20\n"
+      "9\t46.71999999999988\t22\n",
+      "7\t47.88999999999987\t21\n",
+      "5\t54.75999999999988\t20\n"
      ]
     }
    ],
@@ -381,21 +433,21 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 2",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
-   "name": "python2"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.12"
+   "pygments_lexer": "ipython3",
+   "version": "3.9.8"
   }
  },
  "nbformat": 4,
