--- a/notebooks/magics.ipynb
+++ b/notebooks/magics.ipynb
@@ -6,6 +6,8 @@
    "source": [
     "# AMPLPY: Jupyter Notebook Integration\n",
     "\n",
+    "[![Open In Colab](https://colab.research.google.com/assets/colab-badge.svg)](https://colab.research.google.com/github/ampl/amplpy/blob/master/notebooks/magics.ipynb)\n",
+    "\n",
     "Documentation: http://amplpy.readthedocs.io\n",
     "\n",
     "GitHub Repository: https://github.com/ampl/amplpy\n",
@@ -17,7 +19,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Imports"
+    "### Setup"
    ]
   },
   {
@@ -26,7 +28,57 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from __future__ import print_function\n",
+    "!pip install -q amplpy"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Google Colab interagration"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%%bash\n",
+    "[[ ! -e /colabtools ]] && exit  # Run only if running on Google Colab\n",
+    "rm -rf ampl.linux-intel64\n",
+    "#!curl -O https://portal.ampl.com/dl/amplce/ampl.linux64.tgz && tar xzf ampl.linux64.tgz \n",
+    "curl -O https://portal.ampl.com/dl/modules/ampl-module.linux64.tgz && tar xzf ampl-module.linux64.tgz\n",
+    "curl -O https://portal.ampl.com/dl/modules/gurobi-module.linux64.tgz && tar xzf gurobi-module.linux64.tgz\n",
+    "cd ampl.linux-intel64 && pwd\n",
+    "#LICENSE_UUID=\n",
+    "test ! -z $LICENSE_UUID && curl -O https://portal.ampl.com/download/license/$LICENSE_UUID/ampl.lic"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import os\n",
+    "if os.path.exists('/colabtools'):\n",
+    "    os.environ['PATH'] += os.pathsep + '/content/ampl.linux-intel64'"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Imports"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "from amplpy import AMPL, register_magics\n",
     "import os, sys"
    ]
@@ -41,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -60,7 +112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -82,7 +134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -100,7 +152,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -137,7 +189,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -165,15 +217,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Gurobi 8.1.0: outlev=1\n",
+      "Gurobi 9.5.0: outlev=1\n",
+      "Set parameter OutputFlag to value 1\n",
+      "Set parameter InfUnbdInfo to value 1\n",
+      "Gurobi Optimizer version 9.5.0 build v9.5.0rc5 (mac64[x86])\n",
+      "Thread count: 4 physical cores, 8 logical processors, using up to 8 threads\n",
       "Optimize a model with 1 rows, 4 columns and 4 nonzeros\n",
+      "Model fingerprint: 0x1dc33b55\n",
       "Variable types: 0 continuous, 4 integer (4 binary)\n",
       "Coefficient statistics:\n",
       "  Matrix range     [3e+00, 6e+00]\n",
@@ -182,17 +239,22 @@
       "  RHS range        [1e+01, 1e+01]\n",
       "Found heuristic solution: objective 50.0000000\n",
       "Presolve removed 1 rows and 4 columns\n",
-      "Presolve time: 0.00s\n",
+      "Presolve time: 0.01s\n",
       "Presolve: All rows and columns removed\n",
       "\n",
-      "Explored 0 nodes (0 simplex iterations) in 0.00 seconds\n",
-      "Thread count was 1 (of 4 available processors)\n",
+      "Explored 0 nodes (0 simplex iterations) in 0.01 seconds (0.00 work units)\n",
+      "Thread count was 1 (of 8 available processors)\n",
       "\n",
       "Solution count 2: 90 50 \n",
       "\n",
       "Optimal solution found (tolerance 1.00e-04)\n",
       "Best objective 9.000000000000e+01, best bound 9.000000000000e+01, gap 0.0000%\n",
+      "Set parameter Presolve to value 0\n",
+      "Set parameter Method to value 1\n",
+      "Gurobi Optimizer version 9.5.0 build v9.5.0rc5 (mac64[x86])\n",
+      "Thread count: 4 physical cores, 8 logical processors, using up to 8 threads\n",
       "Optimize a model with 1 rows, 4 columns and 4 nonzeros\n",
+      "Model fingerprint: 0xe07c951d\n",
       "Coefficient statistics:\n",
       "  Matrix range     [3e+00, 6e+00]\n",
       "  Objective range  [1e+01, 5e+01]\n",
@@ -201,9 +263,9 @@
       "Iteration    Objective       Primal Inf.    Dual Inf.      Time\n",
       "       0    9.0000000e+01   0.000000e+00   0.000000e+00      0s\n",
       "\n",
-      "Solved in 0 iterations and 0.00 seconds\n",
+      "Solved in 0 iterations and 0.00 seconds (0.00 work units)\n",
       "Optimal objective  9.000000000e+01\n",
-      "Gurobi 8.1.0: optimal solution; objective 90\n"
+      "Gurobi 9.5.0: optimal solution; objective 90\n"
      ]
     }
    ],
@@ -213,18 +275,11 @@
     "option gurobi_options 'outlev=1';\n",
     "solve;"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -238,7 +293,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.7"
+   "version": "3.9.8"
   }
  },
  "nbformat": 4,
